apps/kube-prometheus-stack/templates/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: observability
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.shivpatel.xyz`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
  tls: {}
