apps/kube-prometheus-stack/templates/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: observability
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.shivpatel.xyz`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-prometheus
      port: 9090
  tls: {}
